1.7 reformat and adding buffer