@@ -1,9 +1,9 @@
-/*  
+/*
  *   This file is part of the computer assignment for the
  *   Information Retrieval course at KTH.
- * 
+ *
  *   Johan Boye, KTH, 2018
- */  
+ */
 
 package ir;
 
@@ -15,10 +15,10 @@ import java.nio.charset.*;
 
 /*
  *   Implements an inverted index as a hashtable on disk.
- *   
+ *
  *   Both the words (the dictionary) and the data (the postings list) are
  *   stored in RandomAccessFiles that permit fast (almost constant-time)
- *   disk seeks. 
+ *   disk seeks.
  *
  *   When words are read and indexed, they are first put in an ordinary,
  *   main-memory HashMap. When all words are read, the index is committed
@@ -26,43 +26,63 @@ import java.nio.charset.*;
  */
 public class PersistentHashedIndex implements Index {
 
-    /** The directory where the persistent index files are stored. */
+    /**
+     * The directory where the persistent index files are stored.
+     */
     public static final String INDEXDIR = "../../index";
 
-    /** The dictionary file name */
+    /**
+     * The dictionary file name
+     */
     public static final String DICTIONARY_FNAME = "dictionary";
 
-    /** The data file name */
+    /**
+     * The data file name
+     */
     public static final String DATA_FNAME = "data";
 
-    /** The terms file name */
+    /**
+     * The terms file name
+     */
     public static final String TERMS_FNAME = "terms";
 
-    /** The doc info file name */
+    /**
+     * The doc info file name
+     */
     public static final String DOCINFO_FNAME = "docInfo";
 
-    /** The dictionary hash table on disk can fit this many entries. */
+    /**
+     * The dictionary hash table on disk can fit this many entries.
+     */
     public static final long TABLESIZE = 12000017L; // 600000 * 20 next prime number
-    public static final int ENTRY_LENGTH = 2*Long.BYTES + Integer.BYTES;
+    public static final int ENTRY_LENGTH = 2 * Long.BYTES + Integer.BYTES;
 
-    /** The dictionary hash table is stored in this file. */
+    /**
+     * The dictionary hash table is stored in this file.
+     */
     RandomAccessFile dictionaryFile;
 
-    /** The data (the PostingsLists) are stored in this file. */
+    /**
+     * The data (the PostingsLists) are stored in this file.
+     */
     RandomAccessFile dataFile;
 
-    /** Pointer to the first free memory cell in the data file. */
+    /**
+     * Pointer to the first free memory cell in the data file.
+     */
     long free = 0L;
 
-    /** The cache as a main-memory hash map. */
-    HashMap<String,PostingsList> index = new HashMap<String,PostingsList>();
+    /**
+     * The cache as a main-memory hash map.
+     */
+    HashMap<String, PostingsList> index = new HashMap<String, PostingsList>();
 
 
     // ===================================================================
 
     /**
-     *   A helper class representing one entry in the dictionary hashtable.
-     */ 
+     * A helper class representing one entry in the dictionary hashtable.
+     */
     public class Entry {
         //
         //  YOUR CODE HERE
@@ -95,37 +115,37 @@ public class PersistentHashedIndex implements Index {
 
 
     /**
-     *  Constructor. Opens the dictionary file and the data file.
-     *  If these files don't exist, they will be created.
+     * Constructor. Opens the dictionary file and the data file.
+     * If these files don't exist, they will be created.
      */
     public PersistentHashedIndex() {
         try {
-            dictionaryFile = new RandomAccessFile( INDEXDIR + "/" + DICTIONARY_FNAME, "rw" );
-            dataFile = new RandomAccessFile( INDEXDIR + "/" + DATA_FNAME, "rw" );
-        } catch ( IOException e ) {
+            dictionaryFile = new RandomAccessFile(INDEXDIR + "/" + DICTIONARY_FNAME, "rw");
+            dataFile = new RandomAccessFile(INDEXDIR + "/" + DATA_FNAME, "rw");
+        } catch (IOException e) {
             e.printStackTrace();
         }
 
         try {
             readDocInfo();
-        } catch ( FileNotFoundException e ) {
-        } catch ( IOException e ) {
+        } catch (FileNotFoundException e) {
+        } catch (IOException e) {
             e.printStackTrace();
         }
     }
 
     /**
-     *  Writes data to the data file at a specified place.
+     * Writes data to the data file at a specified place.
      *
-     *  @return The number of bytes written.
+     * @return The number of bytes written.
      */
-    int writeData( String dataString, long ptr ) {
+    int writeData(String dataString, long ptr) {
         try {
-            dataFile.seek( ptr );
+            dataFile.seek(ptr);
             byte[] data = dataString.getBytes();
-            dataFile.write( data );
+            dataFile.write(data);
             return data.length;
-        } catch ( IOException e ) {
+        } catch (IOException e) {
             e.printStackTrace();
             return -1;
         }
@@ -133,15 +153,15 @@ public class PersistentHashedIndex implements Index {
 
 
     /**
-     *  Reads data from the data file
+     * Reads data from the data file
      */
-    String readData( long ptr, int size ) {
+    String readData(long ptr, int size) {
         try {
-            dataFile.seek( ptr );
+            dataFile.seek(ptr);
             byte[] data = new byte[size];
-            dataFile.readFully( data );
+            dataFile.readFully(data);
             return new String(data);
-        } catch ( IOException e ) {
+        } catch (IOException e) {
             e.printStackTrace();
             return null;
         }
@@ -153,39 +173,43 @@ public class PersistentHashedIndex implements Index {
     //  Reading and writing to the dictionary file.
 
     /**
-     *  Writes an entry to the dictionary hash table file.
+     * Writes an entry to the dictionary hash table file.
      *
-     *  @param entry The key of this entry is assumed to have a fixed length
-     *  @param ptr   The place in the dictionary file to store the entry
+     * @param entry The key of this entry is assumed to have a fixed length
+     * @param ptr   The place in the dictionary file to store the entry
      */
-    void writeEntry( Entry entry, long ptr ) {
+    void writeEntry(Entry entry, long ptr) {
         //
         //  YOUR CODE HERE
         //
         try {
+            ByteBuffer buffer = ByteBuffer.allocate(ENTRY_LENGTH);
+            buffer.putLong(entry.getPtr());
+            buffer.putInt(entry.getSize());
+            buffer.putLong(entry.getHash());
             dictionaryFile.seek(ptr);
-            dictionaryFile.writeLong(entry.getPtr());
-            dictionaryFile.writeInt(entry.getSize());
-            dictionaryFile.writeLong(entry.getHash());
+            dictionaryFile.write(buffer.array());
         } catch (IOException e) {
             e.printStackTrace();
         }
     }
 
     /**
-     *  Reads an entry from the dictionary file.
+     * Reads an entry from the dictionary file.
      *
-     *  @param ptr The place in the dictionary file where to start reading.
+     * @param ptr The place in the dictionary file where to start reading.
      */
-    Entry readEntry( long ptr ) {
+    Entry readEntry(long ptr) {
         //
         //  REPLACE THE STATEMENT BELOW WITH YOUR CODE
         //
         try {
+            ByteBuffer buffer = ByteBuffer.allocate(ENTRY_LENGTH);
             dictionaryFile.seek(ptr);
-            long ptrData = dictionaryFile.readLong();
-            int size = dictionaryFile.readInt();
-            long hash = dictionaryFile.readLong();
+            dictionaryFile.readFully(buffer.array());
+            long ptrData = buffer.getLong();
+            int size = buffer.getInt();
+            long hash = buffer.getLong();
             if (ptrData == 0 && size == 0 && hash == 0) {
                 return null;
             }
@@ -200,36 +224,36 @@ public class PersistentHashedIndex implements Index {
     // ==================================================================
 
     /**
-     *  Writes the document names and document lengths to file.
+     * Writes the document names and document lengths to file.
      *
-     * @throws IOException  {exception_description}
+     * @throws IOException {exception_description}
      */
     private void writeDocInfo() throws IOException {
-        FileOutputStream fout = new FileOutputStream( INDEXDIR + "/docInfo" );
-        for ( Map.Entry<Integer,String> entry : docNames.entrySet() ) {
+        FileOutputStream fout = new FileOutputStream(INDEXDIR + "/docInfo");
+        for (Map.Entry<Integer, String> entry : docNames.entrySet()) {
             Integer key = entry.getKey();
             String docInfoEntry = key + ";" + entry.getValue() + ";" + docLengths.get(key) + "\n";
-            fout.write( docInfoEntry.getBytes() );
+            fout.write(docInfoEntry.getBytes());
         }
         fout.close();
     }
 
 
     /**
-     *  Reads the document names and document lengths from file, and
-     *  put them in the appropriate data structures.
+     * Reads the document names and document lengths from file, and
+     * put them in the appropriate data structures.
      *
-     * @throws     IOException  {exception_description}
+     * @throws IOException {exception_description}
      */
     private void readDocInfo() throws IOException {
-        File file = new File( INDEXDIR + "/docInfo" );
+        File file = new File(INDEXDIR + "/docInfo");
         FileReader freader = new FileReader(file);
-        try ( BufferedReader br = new BufferedReader(freader) ) {
+        try (BufferedReader br = new BufferedReader(freader)) {
             String line;
             while ((line = br.readLine()) != null) {
                 String[] data = line.split(";");
-                docNames.put( new Integer(data[0]), data[1] );
-                docLengths.put( new Integer(data[0]), new Integer(data[2]) );
+                docNames.put(Integer.valueOf(data[0]), data[1]);
+                docLengths.put(Integer.valueOf(data[0]), Integer.valueOf(data[2]));
             }
         }
         freader.close();
@@ -237,7 +261,7 @@ public class PersistentHashedIndex implements Index {
 
 
     /**
-     *  Write the index to files.
+     * Write the index to files.
      */
     public void writeIndex() {
         int collisions = 0;
@@ -250,8 +274,8 @@ public class PersistentHashedIndex implements Index {
             //
             //  YOUR CODE HERE
             //
-            dictionaryFile.setLength( 0 ); // Remove old contents
-            dictionaryFile.setLength( TABLESIZE );
+            dictionaryFile.setLength(0); // Remove old contents
+            dictionaryFile.setLength(TABLESIZE);
             for (Map.Entry<String, PostingsList> entry : index.entrySet()) {
                 String key = entry.getKey();
                 PostingsList postingsList = entry.getValue();
@@ -268,14 +292,14 @@ public class PersistentHashedIndex implements Index {
                 writeEntry(new Entry(ptr, size, hash), hash);
                 free += writeData(postingsListBuilder, ptr);
             }
-        } catch ( IOException e ) {
+        } catch (IOException e) {
             e.printStackTrace();
         }
-        System.err.println( collisions + " collisions" );
+        System.err.println(collisions + " collisions");
     }
 
     public static long hashFunction(String s) {
-        return (Math.abs(s.hashCode()) + ENTRY_LENGTH)% TABLESIZE;
+        return (Math.abs(s.hashCode()) + ENTRY_LENGTH) % TABLESIZE;
     }
 
 
@@ -283,10 +307,10 @@ public class PersistentHashedIndex implements Index {
 
 
     /**
-     *  Returns the postings for a specific term, or null
-     *  if the term is not in the index.
+     * Returns the postings for a specific term, or null
+     * if the term is not in the index.
      */
-    public PostingsList getPostings( String token ) {
+    public PostingsList getPostings(String token) {
         //
         //  REPLACE THE STATEMENT BELOW WITH YOUR CODE
         //
@@ -300,7 +324,7 @@ public class PersistentHashedIndex implements Index {
                     return PostingsList.fromString(postingsListString);
                 }
             }
-            hash = (hash + ENTRY_LENGTH) % TABLESIZE ;
+            hash = (hash + ENTRY_LENGTH) % TABLESIZE;
             e = readEntry(hash);
         }
         return null;
@@ -308,9 +332,9 @@ public class PersistentHashedIndex implements Index {
 
 
     /**
-     *  Inserts this token in the main-memory hashtable.
+     * Inserts this token in the main-memory hashtable.
      */
-    public void insert( String token, int docID, int offset ) {
+    public void insert(String token, int docID, int offset) {
         //
         //  YOUR CODE HERE
         //
@@ -331,15 +355,15 @@ public class PersistentHashedIndex implements Index {
 
 
     /**
-     *  Write index to file after indexing is done.
+     * Write index to file after indexing is done.
      */
     public void cleanup() {
-        System.err.println( index.keySet().size() + " unique words" );
+        System.err.println(index.keySet().size() + " unique words");
         long time = System.currentTimeMillis();
-        System.err.print( "Writing index to disk..." );
+        System.err.print("Writing index to disk...");
         writeIndex();
         long elapsedTime = System.currentTimeMillis() - time;
-        System.err.println( "done!" );
-        System.err.println( "Elapsed time:    " + elapsedTime + "ms" );
+        System.err.println("done!");
+        System.err.println("Writing took: " + elapsedTime / 1000F + "s");
     }
 }
